...
					<MaterialDesignIcons
						name={`jellyfish${!focused ? '-outline' : ''}`}
						color={color}
						size={size}
					/>
				),
				tabBarButtonTestID: 'home-tab-button',
			},
		},
		LibraryTab: {
			screen: LibraryStack,
			options: {
				title: 'Library',
...
					<MaterialDesignIcons
						name={`music-box-multiple${!focused ? '-outline' : ''}`}
						color={color}
						size={size}
					/>
				),
				tabBarButtonTestID: 'library-tab-button',
			},
		},
		SearchTab: {
			screen: SearchStack,
			options: {
				title: 'Search',
...
