...
	const customBlurhash = typeof payload?.blurhash === 'string' ? payload.blurhash : undefined

	return (
		<GestureDetector gesture={gesture}>
			<Animated.View
				collapsable={false}
				testID='miniplayer-test-id'
				entering={SlideInDown.springify()}
			>
				<YStack
					onPress={openPlayer}
					backgroundColor={theme.background.val}
					{...ICON_PRESS_STYLES}
...
