...
						value={username}
						style={
							IS_MAESTRO_BUILD
								? { backgroundColor: '#000', color: '#000' }
								: undefined
						}
						testID='username_input'
						secureTextEntry={IS_MAESTRO_BUILD} // If Maestro build, don't show the username as screen Records
						onChangeText={(value: string | undefined) => setUsername(value)}
						autoCapitalize='none'
						autoCorrect={false}
						autoComplete='username'
						textContentType='username'
...
						tabIndex={1}
						onSubmitEditing={onSubmitEditing}
					/>

					<Button
						backgroundColor={isEmpty(username) || isPending ? '$neutral' : '$primary'}
						testID='sign_in_button'
						onPress={onSubmitEditing}
						color='$background'
						fontWeight='$6'
						{...BUTTON_PRESS_STYLES}
					>
						{isPending ? <Spinner color='$background' /> : 'Sign in'}
...
