...
	return (
		<YStack
			flex={1}
			justifyContent='center'
			paddingHorizontal={'$4'}
			marginBottom={isOnboarding ? '$20' : '$4'}
			testID='library_selection_screen'
		>
			<Animated.View
				entering={FadeInUp.easing(Easing.in(Easing.ease))}
				exiting={FadeOutUp.easing(Easing.out(Easing.ease))}
				style={{
					flex: 1,
...
